--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -2,6 +2,9 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+
+# helm upgrade --install boxes charts
+
 replicaCount: 1
 
 image:
