--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -11,7 +11,7 @@ image:
   repository: virtualkev/boxes.livingroom.cloud
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "1.0"
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
