--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -1,30 +1,30 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "torch-cloud.fullname" . }}
+  name: {{ include "boxes.fullname" . }}
   labels:
-    {{- include "torch-cloud.labels" . | nindent 4 }}
+    {{- include "boxes.labels" . | nindent 4 }}
 spec:
-{{- if not .Values.autoscaling.enabled }}
+  {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
-{{- end }}
+  {{- end }}
   selector:
     matchLabels:
-      {{- include "torch-cloud.selectorLabels" . | nindent 6 }}
+      {{- include "boxes.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-    {{- with .Values.podAnnotations }}
+      {{- with .Values.podAnnotations }}
       annotations:
         {{- toYaml . | nindent 8 }}
-    {{- end }}
+      {{- end }}
       labels:
-        {{- include "torch-cloud.selectorLabels" . | nindent 8 }}
+        {{- include "boxes.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "torch-cloud.serviceAccountName" . }}
+      serviceAccountName: {{ include "boxes.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
