--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "torch-cloud.fullname" . }}
+  name: {{ include "boxes.fullname" . }}
   labels:
-    {{- include "torch-cloud.labels" . | nindent 4 }}
+    {{- include "boxes.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "torch-cloud.selectorLabels" . | nindent 4 }}
+    {{- include "boxes.selectorLabels" . | nindent 4 }}
