--- a/helm/templates/serviceaccount.yaml
+++ b/helm/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "torch-cloud.serviceAccountName" . }}
+  name: {{ include "boxes.serviceAccountName" . }}
   labels:
-    {{- include "torch-cloud.labels" . | nindent 4 }}
+    {{- include "boxes.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
